# ros2-project-template

.github/: PULL_REQUEST_TEMPLATE.md  sync-files.yaml
.github/workflows/: codeql-analysis.yml  create-ros2-package.yaml
.template-interface-package/: .CMakeLists.txt  .package.xml
.template-package/: .CMakeLists.txt  package.xml
hoge_package/: CMakeLists.txt  package.xml
test_package/: CMakeLists.txt  package.xml
